# RoboticStudio2-JAMC

./: .gitmodules  CMakeLists.txt  README.md  REDME.md  package.xml
include/ui/: ui_piano.h  ui_sample.h
launch/: sample.launch.py  ui_test.launch.py
src/control/: controller.h
src/midi_processor/: midi_processor.cpp  midi_processor.h  midi_read_test.cpp  midi_testing_main.cpp
src/midi_processor/midiLibrary/src/: MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp
src/perception/: placeholder.py
src/sample/: sample.cpp  sample.h  sample_main.cpp
src/ui/: ui_main.cpp  ui_piano.cpp  ui_piano.h  ui_sample.cpp  ui_sample_main.cpp
